# lymixture

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _variables.yml  console.sh  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  setup.sh
core/: README.md  __init__.py  costum_types.py  em_sampling.py  icd_definitions.py  main_lymm.py  main_lymm_synth.py  mixture_model.py  mm_plotting.py  mm_predict.py  model_functions.py  shared.py  util_2.py  utils.py
core/data/: create_subsites_datasets.py
core/legacy/: em_sampling copy 2.py  em_sampling copy.py  mixture_model copy.py
core/notebooks/: mixture_model_2_clusters.ipynb
core/scripts/: main_lymm.py  main_lymm_synth copy.py  main_lymm_synth.py
data/: .gitignore  2023-clb-multisite.csv.dvc  create_subsites_datasets.py  joined.csv
exploration/: inspect_unbalanced_datasets.ipynb  mixture_model_subsite_data.ipynb  test_new_structure.ipynb
lymixture/: __init__.py  em_sampling.py  mixture_model.py  mm_plotting.py  mm_predict.py  model_functions.py  models.py  types.py  utils.py
lymph/: _version.py  diagnose_times.py  graph.py  helper.py  matrix.py
lyscripts/: __init__.py  __main__.py  _version.py  decorators.py  evaluate.py  sample.py  temp_schedule.py  utils.py
notebooks/: mixture_model_tutorial.ipynb
scripts/: helpers.py  mixture_model_sampling.py  plot_component_assignments.py  prevalence_by_subsite.py  prevalence_comparison.py  prevalence_superplot.py  write_num_patients.py
styles/: mplstyle_rl.txt
tests/: fixtures.py  integration.ipynb  test_docstrings.py  test_mixture_model.py
(+200 files in other folders)
