[build-system]
requires = [
    "setuptools >= 61.0.0",
    "setuptools_scm >= 7.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "lymixture"
description = "Package to model lymphatic spread sa mixture of HMMs as implemented in the `lymph-model` package."
authors = [
    {name = "Julian Brönnimann"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy < 2",
    "pandas < 3",
    "lymph-model >= 1.0.0.a4",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pylint",
]

[tool.setuptools_scm]
write_to = "lymixture/_version.py"
local_scheme = "no-local-version"

[tool.setuptools]
packages = ["lymixture"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "lymixture._version.version"}

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pycln]
all = true
